--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ jobs:
   tests:
     name: Forge Testing
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        profile: [via-ir,min-solc,min-solc-via-ir,intense-0,intense-1]
+
     steps:
       - uses: actions/checkout@v2
 
@@ -17,35 +22,5 @@ jobs:
       - name: Install Dependencies
         run: forge install
 
-      - name: Run Tests
-        run: FOUNDRY_PROFILE=ci forge test
-
-  scripts:
-    strategy:
-      fail-fast: true
-    name: Run Unix Scripts
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
-
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-
-      - name: Run Forge build
-        run: |
-          forge --version
-          forge build --sizes
-        id: build
-        continue-on-error: true
-
-      - name: Run scripts
-        run: |
-          ls -lsa
-          ls script/
-          for file in script/*; do
-            forge script $file
-          done
+      - name: Run Tests with ${{ matrix.profile }}
+        run: FOUNDRY_PROFILE=${{ matrix.profile }} forge test
