--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# NodeJS files
+node_modules/
+coverage
+coverage.json
+typechain
+
+# Hardhat files
+cache
+artifacts
+
 cache/
 out/
 
@@ -12,3 +22,6 @@ out/
 flattened.txt
 
 broadcast
+
+# Coverage
+lcov.info
