--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/erc721a"]
 	path = lib/erc721a
 	url = https://github.com/chiru-labs/erc721a
+[submodule "lib/erc721a-upgradeable"]
+	path = lib/erc721a-upgradeable
+	url = https://github.com/chiru-labs/erc721a-upgradeable
