Add ERC721A examples

--- a/foundry.toml
+++ b/foundry.toml
@@ -13,7 +13,10 @@ remappings = [
   "forge-std=lib/forge-std/src/",
   "openzeppelin-contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts/",
   "openzeppelin-contracts=lib/openzeppelin-contracts/contracts/",
+  "erc721a=lib/erc721a/contracts/",
+  "erc721a-upgradeable=lib/erc721a-upgradeable/contracts/",
   "operator-filter-registry=lib/operator-filter-registry/src/"
+
 ]
 
 [profile.default.fuzz]
