--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/erc721a"]
+	path = lib/erc721a
+	url = https://github.com/chiru-labs/erc721a
+[submodule "lib/erc721a-upgradeable"]
+	path = lib/erc721a-upgradeable
+	url = https://github.com/chiru-labs/erc721a-upgradeable
