--- a/foundry.toml
+++ b/foundry.toml
@@ -20,6 +20,7 @@ remappings = [
 
 [fmt]
 line_length = 100 # While we allow up to 120, we lint at 100 for readability.
+bracket_spacing = true
 
 [profile.default.fuzz]
 runs = 256
