forge install: solady
v0.0.105

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/erc721a-upgradeable"]
 	path = lib/erc721a-upgradeable
 	url = https://github.com/chiru-labs/erc721a-upgradeable
+[submodule "lib/solady"]
+	path = lib/solady
+	url = https://github.com/vectorized/solady
